# vocabulary-helper

./: .env.example  .gitignore  README.md  pyproject.toml
src/n3_discord_vocab/: __init__.py  bot.py  config.py  db.py  dictionary.py  llm.py  models.py  quiz.py  seed_words.py
tests/: test_llm.py  test_quiz.py  test_store.py
