[project]
name = "vocabulary-helper"
version = "0.1.0"
description = "A local Discord bot for JLPT N3 vocabulary quizzes with adaptive review labels."
requires-python = ">=3.11"
dependencies = [
  "discord.py>=2.4.0",
  "python-dotenv>=1.0.1",
  "tzdata>=2025.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
